--- a/demo/templates/contact.html
+++ b/demo/templates/contact.html
@@ -7,5 +7,37 @@ Meri sasti web page
 
 
 {% block body %}
-This is my contact body
+<div class="container">
+    <img src="https://source.unsplash.com/1200x400/?phone,mobile" class="d-block w-100 my-4" alt="...">
+    <div class="text-center">Contact Us</div>
+    <form method = "post" action="/contact">
+    {% csrf_token %}
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Name</label>
+            <input type="text" class="form-control" id="exampleFormControlInput1" name="name"
+                placeholder="Enter you Nname">
+        </div>
+
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <input type="email" class="form-control" name="email" id="exampleFormControlInput1"
+                placeholder="Enter your Email">
+        </div>
+
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Phone Number</label>
+            <input type="phone" class="form-control" name="phone" id="exampleFormControlInput1"
+                placeholder="Enter your Phone number">
+        </div>
+
+        <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Query</label>
+            <textarea class="form-control" name="desc" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+
+        <button class="btn btn-primary" type="submit">Submit</button>
+    </form>
+
+</div>
+
 {% endblock body %}
